hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/ban_patc_definition/patc_def.php.exp
File "patc_def.php", line 4, characters 14-14:
`as` constraints are only legal on abstract type constants (NastCheck[3093])
