hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/ban_patc_definition/patc_def.php
<?hh

class C {
  const type T as mixed = int;
}
